Montevideo/src/objects/Coupon__c.object
<CustomObject>
    <fields>
        <fullName>Available__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateUsed__c</fullName>
        <label>DateUsed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discounted_amount__c</fullName>
        <label>Discounted amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ReasonForCoupon__c</fullName>
        <label>Reason for coupon</label>
        <picklist>
            <picklistValues>
                <fullName>Compra voluminosa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Producto del día</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cliente frecuente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Número de ticket afortunado</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SurveyAnswer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SurveyAnswer</label>
        <referenceTo>SurveyAnswer__c</referenceTo>
        <relationshipLabel>Coupons</relationshipLabel>
        <relationshipName>Coupons</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Coupon</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Coupon Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coupons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>